syntax = "proto3";

package rbacProto;
option go_package = "../rbac_pb;rbac_pb";
//import "google/protobuf/any.proto";


enum SESSION{
  SHARE_RBAC_UID  =0;
  SHARE_RBAC_DOMAIN_ID =1;
  SHARE_RBAC_ROLE_IDS=2;
  SHARE_RBAC_PL=3;
  SHARE_RBAC_METADATA_KEY=4;
}
message DefaultRes {
  // @inject_tag: json:"code"
  int32  code = 1;
  // @inject_tag: json:"msg"
  string msg = 2;
  // @inject_tag: json:"data"
  string Data = 3;
}

message EmptyReq{}

// 主键请求
message DefaultPkReq{
  oneof pk{
    // @gotags: json:"id"
    int64 ID = 1;
    // @gotags: json:"code"
    string Code = 2;
  } 
}

// 主键请求
message DomainIDReq{
   int64 DomainID=3;
}

message Session{
  int64 UID=1;
  int64 DomainID=2;
  int64 PL=3;
 repeated int64 RoleIDs=4;
}
